# bmi-prms6

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  README.md
bmitests/: fixtures.f90  test_get_grid_size.f90  test_get_grid_size.vfproj  test_get_grid_x.f90  test_get_grid_x.vfproj
src/: CMakeLists.txt  CMakeLists_old2.txt  bmi_prms.f90  m_prms.f90  main.f90
src/prms-bmi/: CMakeLists.txt  bmi.f90  bmi_prms.f90  m_prms.f90
src/prms-bmi-app/: CMakeLists.txt
tests/pipestem/: .gitignore  control.default
